Fix alignment of rows

--- a/resources/css/scss_resources/general/main.scss
+++ b/resources/css/scss_resources/general/main.scss
@@ -7,7 +7,7 @@ body {
     .flex-row {
         display: flex;
         flex-direction: row!important;
-        align-items: baseline;
+        align-items: center;
     }
 
     .flex-col {
